通过cookie读取、存储两项参数
local Vue.js and js.cookie.min.js files added

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 		<meta charset="utf-8" />
 		<link rel="stylesheet" href="https://static.runoob.com/assets/foundation-icons/foundation-icons.css">
 		<link rel="stylesheet" href="css/index.css">
-		<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+		<script src="js/vue.js"></script>
+		<script src="js/js.cookie.min.js"></script>
 	</head>
 	<body>
 		
@@ -22,6 +23,6 @@
 			</form>
 		</div>
 		
-		<script src="js/index.js"></script>		
+		<script src="js/index.js"></script>
 	</body>
 </html>
